--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -43,9 +43,9 @@
   "TimeRequired": "req. time",
   "RemojuRecommended": "Remoju plans",
   "UserSubmissionPlan": "User plans",
-  "FindEveryoneRecommendations": "どこへ行く",
-  "BackEveryoneRecommendations": "一覧へ戻る",
-  "BackEveryoneRecommendationsMyPage": "一覧",
+  "FindEveryoneRecommendations": "Whore to?",
+  "BackEveryoneRecommendations": "Back to list",
+  "BackEveryoneRecommendationsMyPage": "List",
   "EditPlan": "Edit",
   "DeletePlan": "Delete",
   "Application": "Pending",
@@ -126,8 +126,8 @@
   "editCoverImage": "Edit cover photo",
   "Article": "Written by",
   "RecommendedPlanwithSpot": " Related plan",
-  "NumberOfSpots": "含まれるスポット数",
-  "ErrorMsgAddSpot": "1つのプランに追加できるスポット数は最大20スポットです。(出発地・到着地を含む)",
+  "NumberOfSpots": "Nuber of spots",
+  "ErrorMsgAddSpot": "One Plan can have up to a maximum of 20 Spots (including starting point and destination).",
   "SearchByKeyword": "Enter the keyward",
   "AreaAndCommitment": "Area・Preferences",
   "RemojuStaff": "Remoju staff",
@@ -141,7 +141,7 @@
   "ShareThisPlan": "Share this plan",
   "FeaturesOfThisPlan": "Detail of this plan",
   "RecommendedSpotsInTheSameArea": "Recommended spots in the same area",
-  "FeaturedLink": "このエリアのおすすめ特集",
+  "FeaturedLink": "Recommended features of this area",
   "SharePlan": "Share plan",
   "SharePlanSave": "*This URL shows saved plans. If you want to share this plan being edited, please save the plan once.",
   "SharePlanNoSave": "Save your plan and share it with this URL.",
@@ -182,18 +182,18 @@
   "Preview": "Preview",
   "EndOfPublication": "End of publication",
   "ShowRoute": "Show route",
-  "EditPlanConfirmTitle": "未保存のプランがあります。",
-  "EditPlanConfirmText": "はいを選択した場合、未保存の編集内容は削除され、選択したプランの編集が開始されます。",
+  "EditPlanConfirmTitle": "You have an unsaved Plan.",
+  "EditPlanConfirmText": "If you select 'yes', your unsaved edits will be lost, and you can begin editing the selected Plan.",
   "Close": "Close",
   "Open": "Open",
-  "PlanSavedConfirmTitle": "プランをマイページに保存しました。",
-  "PlanSavedConfirmButton": "マイプラン一覧へ",
+  "PlanSavedConfirmTitle": "View My Page",
+  "PlanSavedConfirmButton": "View My Plans",
   "PlanClearConfirm": "Are you sure to discard this plan?",
   "ShareYourOwnTrip": "Share your trip",
   "startTimeEx": "0:00",
   "EnterThePlanName": "Enter the plan title (up to 20 characters)",
   "PlanNameEx": "Enter the plan title",
-  "PlanExplanationEx": "プランのポイントや内容を書こう",
+  "PlanExplanationEx": "Write about your Plan",
   "labelClear":"Clear",
   "MemoEx": "Enter recommended points",
   "SelectAPhoto": "Select a photo (up to 8)",
@@ -202,11 +202,11 @@
   "Private": "Archive",
   "SelectAnAreaCategory": "Select an area category (optional)",
   "ShareYourPlanWithOtherUsers": "Share your plan with other users",
-  "PlanSave": "プランを保存しました。",
+  "PlanSave": "Plan saved.",
   "NoSpotName": "Not all required fields are filled.Please enter the title.",
-  "NoSpot": "スポットはまだありません。",
-  "NoSpot1": "右の一覧から",
-  "NoSpot2": "お好きなスポットを追加しよう。",
+  "NoSpot": "There are no Spots yet.",
+  "NoSpot1": "From the right",
+  "NoSpot2": "Add a favorite Spot.",
   "RegisterSpot": "Register spot",
   "NoReview": "There are no reviews yet.",
   "VisitDate": "Visit Date",
@@ -226,24 +226,24 @@
   "VideoSizeError": "Video files larger than 100MB cannot be uploaded.",
   "FreeMemoEx": "Message for everyone",
   "MakeMyPlan": "Make my plan",
-  "ArragePlan": "プラン作成画面",
-  "SetDeparturePoint": "出発地のセット",
-  "SetDestination": "到着地のセット",
+  "ArragePlan": "Plan creation screen",
+  "SetDeparturePoint": "Set point of departure",
+  "SetDestination": "Set destination",
   "PointOfDeparture": "Point of departure",
   "ArrivalPlace": "Arrival place",
   "Remove": "Remove",
   "SpotStart": "Start",
   "SpotEnd": "End",
   "ReviewSaved": "We have received your review. Please wait for a while until it is approved.",
-  "PlanRemoveConfirmTitle": "プランを削除しますか？",
-  "PlanRemoveConfirmText": "このプランを編集中の場合でも、編集中の内容を含め、このプランの全てが削除されます。",
+  "PlanRemoveConfirmTitle": "Do you want to delete this Plan?",
+  "PlanRemoveConfirmText": "Even if you are still editing this Plan, everything will be deleted, including the content being edited.",
   "ReviewRemoveConfirm": "Do you want to delete the review?",
   "ReviewRemoved": "The review has been deleted.",
   "SelectRating": "Please select a rating of 1-5.",
   "SelectAPhotoReview": "Let's select a photo.",
   "ReleaseConfirm": "Do you want to publish it?",
-  "ReleaseConfirmText": "公開する場合は、投稿内容にご注意いただき、利用規約の了承の上、公開を行ってください。自分のみが閲覧可能な状態で保存をする場合には、公開先を「自分のみ(非公開)」に変更し直してから保存ボタンを押してください。",
-  "ReleaseButton": "規約に了承して公開する",
+  "ReleaseConfirmText": "Before publishing, please check the content of the post and publish it after agreeing to the Terms of Use. If you want to save your post so that only you can view it, please change the publication destination to 'only yourself (private)' and then press the save button.",
+  "ReleaseButton": "Accept the Terms and Conditions and publish",
   "PrivateConfirm": "Do you want to keep it private?",
   "ReleaseSaved": "Release",
   "PrivateSaved": "Archive.",
@@ -252,7 +252,7 @@
   "SpotExplanationEx": "Recommended points of the spot.",
   "FavoriteRemoveConfirm": "Are you sure to delete your favorites?",
   "FavoriteRemoved": "Deleted your favorites.",
-  "PlanName": "プラン名を入力しよう",
+  "PlanName": "Enter a title for this Plan.",
   "MyplanSelectPhoto": "Select a photo",
   "ReportReview": "Report inappropriate content",
   "ReportReviewConfirmTitle": "Report as inappropriate?",
@@ -265,7 +265,7 @@
   "EdifPlanComment": "Editting",
   "CreatePlanComment": "Editting",
   "Set": "Setting",
-  "GoogleKeyword": "住所やスポット名を入力してください",
+  "GoogleKeyword": "Please enter an address or Spot name",
   "StartSearch": "Origin",
   "EndSearch": "Destination",
   "MyPlan#Sec1":"Click",
@@ -273,85 +273,85 @@
   "MyPlan#Sec3":"on each page",
   "MyPlan#Sec4":"to create your own travel plan!",
   "MyPlan#Sec5":"(Up to 6 spots)",
-  "MyPlan#notice":"※保存・共有にはログインが必要です",
-  "ReportPlanUser": "プランを違反報告",
-  "ReportPlanUserConfirmTitle": "不適切なプランを報告しますか？",
-  "ReportPlanUserConfirmText": "ご報告いただいたプランについて、担当者が数営業日以内に確認します。",
-  "Selectimagespot": "スポットのイメージ画像を選択",
-  "Roundspot": "周遊スポット",
-  "Max6spots": "最大６ヶ所",
-  "Option": "※オプション",
-  "AddToPlanOnly": "ここだけプランに追加",
-  "SpotAllClearConfirm": "スポットをすべて削除します。よろしいですか？",
-  "SavePlanConfirm": "プランを保存します。よろしいですか？",
-  "isEdit":"編集する",
-  "isSave":"保存する",
-  "ViewUserPost": "この投稿者の他も見てみる",
+  "MyPlan#notice":"※To save or share, you need to log in",
+  "ReportPlanUser": "Report inappropriate Plan",
+  "ReportPlanUserConfirmTitle": "Report Plan as inappropriate?",
+  "ReportPlanUserConfirmText": "Your report will be reviewed within a few business days.",
+  "Selectimagespot": "You can change the picture used for your Spot.",
+  "Roundspot": "Sightseeing Spots",
+  "Max6spots": "Up to 6 Spots",
+  "Option": "※Option",
+  "AddToPlanOnly": "Only add this Spot to your Plan",
+  "SpotAllClearConfirm": "All your Spots will be deleted. Are you sure you want to continue?",
+  "SavePlanConfirm": "Your Plan will be saved. Are you sure you want to continue?",
+  "isEdit":"Edit",
+  "isSave":"Save",
+  "ViewUserPost": "View more from this contributor",
   "ViewReview":"View my review",
-  "NoReviewMsg":"投稿中のコメントはありません",
-  "NoPlanMsg":"作成中のプランはありません",
-  "LogoutConfirmTitle": "ログアウトしますか？(未保存のプランがあります)",
-  "LogoutConfirmText": "「はい」を選択した場合、未保存の編集内容は削除されます。",
-  "NearestSt": "最寄駅",
-  "SearchGuide": "「温泉」「京都女子旅」...",
-  "CreateNew": "新規作成する",
-  "LoginConfirmTitle": "保存にはログインが必要です。",
-  "LoginConfirmText": "ログイン画面 又は ユーザー登録画面に移動しますか？",
+  "NoReviewMsg":"There are no comments in progress",
+  "NoPlanMsg":"This will search for the shortest route. Would you like to continue?",
+  "LogoutConfirmTitle": "You have unsaved Plans. Are you sure you want to log out?",
+  "LogoutConfirmText": "If you select 'yes', your unsaved edits will be lost.",
+  "NearestSt": "Closest station",
+  "SearchGuide": "'Tokyo Tower' 'Instaworthy'",
+  "CreateNew": "Create new",
+  "LoginConfirmTitle": "You need to log in to save.",
+  "LoginConfirmText": "Go to the log in/user registration page?",
   "RequiredPlanName": "Please enter the title.",
-  "InplanCount":"プランに追加された回数",
-  "ReviewRate":"レビュー評価",
-  "AutoSearchConfirmTitle": "最短ルートを検索します。よろしいですか？",
-  "AutoSearchConfirmText": "<dl class='route'><dt>出発地</dt><dd>{0}</dd><dt>到着地</dt><dd>{1}</dd></dl>",
-  "ErrorMsgAuto": "最短ルートの検索には4スポット以上必要です。",
-  "Optimized": "最適化済です。",
-  "AgeAnnounced": "年代は公表されます。設定は編集の生年月日で行います。",
-  "SetBirthday": "設定は編集の生年月日で行います。",
-  "ImgSelected" : "写真を選択する",
-  "TravelBookmark": "プラン概要",
-  "PasteImg": "プランの表紙写真を選ぼう",
-  "PasteImgSpot": "スポットの写真を追加します",
-  "NotFound" : "お探しのページは見つかりませんでした。",
-  "ToTopPage": "トップページへ戻る",
-  "SpotsVisited": "周遊スポット",
-  "NotFindRecommendations": "関連する おすすめ は、まだありませんでした。",
-  "Instead": "代わりに",
-  "GoogleSearch": "Google検索",
-  "SearchSpot": "からヒットしたものを表示しています。",
-  "GoogleSearchAny": "Googleで任意のスポットを検索できます。",
-  "ReplaceKeyword": "キーワードを入れ替えて検索してください。",
-  "includedPlan": "（これらのスポットもプランに追加することができます。）",
-  "UserPlan": "ユーザープラン",
-  "Man": "回",
-  "NotPostedRemoju": "Remojuではまだ掲載されていないスポットです。Googleから場所を取得しています。",
-  "PostList": "さんの投稿一覧",
-  "ShareLink": "リンク共有",
-  "ShareLinkPlanContents" : "このリンクを知っているユーザーとは、このプランの内容を共有できます。",
-  "LoginMessage": "ログインしました",
-  "PictureMemo": "写真のコメント",
-  "Hedtitle": "はじめての方へ",
-  "WhereToLook": "探す先",
-  "SpotOverview": "スポット概要",
-  "ErrorMsgSetTransferCar": "1つのプランに保存できるスポット数は、車の場合、最大10スポットです。(出発地・到着地を含む)",
-  "ErrorMsgSetTransferEkitan": "1つのプランに保存できるスポット数は、公共交通機関の場合、最大8スポットです。(出発地・到着地を含む)",
-  "ReleaseDestination": "公開先",
-  "ErrorMsgNoSpot": "スポットを追加してください。",
-  "CopyPlan": "プランコピー",
-  "Reply": "返信",
-  "EditCancel": "キャンセル",
-  "StartEx": "自宅や集合場所など、出発地をセットすると、[出発地] → [ 1つ目のスポット] までの経路が表示されます。",
-  "EndEx": "自宅や到着場所など、出発地をセットすると、[最後のスポット] → [到着地] までの経路が表示されます。",
-  "LinktoDetail":"詳細を見る",
-  "About":"アバウト",
-  "Guide":"ガイド",
-  "Policy":"プライバシー",
-  "MapDisp": "マップ表示",
-  "AutoTips": "出発地から到着地までの最短ルートを計算します。",
-  "Thanks": "いいね",
-  "StartEndSpotDeleteConfirm": "出発地と到着地を削除します。よろしいですか？",
-  "ReleaseStartEndSpotDeleteConfirmText": "出発地と到着地を削除します。公開する場合は、投稿内容にご注意いただき、利用規約の了承の上、公開を行ってください。自分のみが閲覧可能な状態で保存をする場合には、公開先を「自分のみ(非公開)」に変更し直してから保存ボタンを押してください。",
-  "Roundtime":"周遊時間",
-  "ErrorMsgEkitan":"経路　公共手段がありませんでした。",
-  "View": "閲覧数",
-  "InPlanBox": "プランBoxに入りました。",
-  "Contact":"お問い合わせ"
+  "InplanCount":"People who added this to their Plan",
+  "ReviewRate":"Review rating",
+  "AutoSearchConfirmTitle": "This will search for the shortest route. Would you like to continue?",
+  "AutoSearchConfirmText": "<dl class='route'><dt>Departure</dt><dd>{0}</dd><dt>Destination</dt><dd>{1}</dd></dl>",
+  "ErrorMsgAuto": "A minimum of 4 spots is required to find the shortest route.",
+  "Optimized": "Optimized.",
+  "AgeAnnounced": "Your age will be made public.",
+  "SetBirthday": "Settings will be determined by the date of birth entered.",
+  "ImgSelected" : "Choose photos",
+  "TravelBookmark": "Plan overview",
+  "PasteImg": "Choose a cover photo for the Plan",
+  "PasteImgSpot": "Add photos to Spot",
+  "NotFound" : "The page you are searching for was not found.",
+  "ToTopPage": "Back to the top page",
+  "SpotsVisited": "Sightseeing Spots",
+  "NotFindRecommendations": "No relevant recommendations yet.",
+  "Instead": "instead of",
+  "GoogleSearch": "Google Search",
+  "SearchSpot": "Displaying hits from Google.",
+  "GoogleSearchAny": "You can search for spots on Google.",
+  "ReplaceKeyword": "Please try using different keywords.",
+  "includedPlan": "(You can also add these Spots to your Plan)",
+  "UserPlan": "User Plans",
+  "Man": "people",
+  "NotPostedRemoju": "This Spot has not been published to Remoju yet. The information is from Google.",
+  "PostList": "All posts from",
+  "ShareLink": "Share link",
+  "ShareLinkPlanContents" : "Users with this link can share this Plan.",
+  "LoginMessage": "Logged in",
+  "PictureMemo": "Comments on photo",
+  "Hedtitle": "To new users",
+  "WhereToLook": "Refine search",
+  "SpotOverview": "Spot overview (required)",
+  "ErrorMsgSetTransferCar": "If you are using a car, the maximum number of Spots you can add to one Plan is 10 (including starting point and destination).",
+  "ErrorMsgSetTransferEkitan": "If you are using public transportation, the maximum number of Spots you can add to one Plan is 8 (including starting point and destination).",
+  "ReleaseDestination": "Publish to",
+  "ErrorMsgNoSpot": "Please add a Spot.",
+  "CopyPlan": "Plan copy",
+  "Reply": "Reply",
+  "EditCancel": "Cancel",
+  "StartEx": "If you set a starting point, such as your home or meeting place, the route to the first Spot will be displayed.",
+  "EndEx": "If you set a destination, such as your home, the route from the last Spot to your destination will also be displayed.",
+  "LinktoDetail":"View details",
+  "About":"About",
+  "Guide":"Guid",
+  "Policy":"Privacy",
+  "MapDisp": "Show map",
+  "AutoTips": "The shortest route from point of departure to destination will be calculated.",
+  "Thanks": "Like!",
+  "StartEndSpotDeleteConfirm": "The point of departure and destination will be deleted. Are you sure you want to continue?",
+  "ReleaseStartEndSpotDeleteConfirmText": "The point of departure and destination will be deleted. Before publishing, please check the contents of the post and publish it after agreeing to the Terms of Use. If you want to save your post so that only you can view it, please change the publication destination to 'only yourself (private)' and then press the save button.",
+  "Roundtime":"Round-trip time",
+  "ErrorMsgEkitan":"There was no public transportation.",
+  "View": "View",
+  "InPlanBox": "Entered the plan box.",
+  "Contact":"Contact"
 }
