traveling route to Route

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -106,7 +106,7 @@
   "Directions": "Directions from current location to ",
   "Directions2": "",
   "Directions3": "Route",
-  "TravelRoute": "Traveling route",
+  "TravelRoute": "Route",
   "RemoveFromPlan": "Remove from the plan",
   "UserProfile": "Profile",
   "MyplanList": "My Plan",
