--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -355,5 +355,5 @@
   "InPlanBox": "プランBoxに入りました。",
   "Contact":"お問い合わせ",
   "PlanboxChange":"プランBOXに入りました。",
-  "PlanSpotList":"みんなのおすすめプラン一覧"
+  "PlanSpotList":"みんなのおすすめ一覧"
 }
