--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -354,6 +354,6 @@
   "View": "閲覧数",
   "InPlanBox": "プランBoxに入りました。",
   "Contact":"お問い合わせ",
-  "PlanboxChange":"プランBOXに入りました。",
+  "PlanboxChange":"プラン編集可能です。",
   "PlanSpotList":"みんなのおすすめ一覧"
 }
