--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -43,7 +43,7 @@
   "TimeRequired": "所要時間",
   "RemojuRecommended": "モデルプラン",
   "UserSubmissionPlan": "みんなのプラン",
-  "FindEveryoneRecommendations": "どこに行く？",
+  "FindEveryoneRecommendations": "みんなのおすすめを見る",
   "BackEveryoneRecommendations": "一覧へ戻る",
   "BackEveryoneRecommendationsMyPage": "一覧",
   "EditPlan": "編集",
@@ -343,7 +343,7 @@
   "LinktoDetail":"詳細を見る",
   "About":"アバウト",
   "Guide":"ガイド",
-  "Policy":"プライバシー",
+  "Policy":"ご利用規約",
   "MapDisp": "マップ表示",
   "AutoTips": "出発地から到着地までの最短ルートを計算します。",
   "Thanks": "いいね",
