--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -317,9 +317,9 @@
   "Instead": "代わりに",
   "GoogleSearch": "Google検索",
   "SearchSpot": "からヒットしたものを表示しています。",
-  "GoogleSearchAny": "Googleで任意のスポットを検索できます。",
-  "ReplaceKeyword": "キーワードを入れ替えて検索してください。",
-  "includedPlan": "（これらのスポットもプランに追加することができます。）",
+  "GoogleSearchAny": "みんなのおすすめはありませんでした。",
+  "ReplaceKeyword": "Googleで任意のスポットを検索します。",
+  "includedPlan": "",
   "UserPlan": "ユーザープラン",
   "Man": "回",
   "NotPostedRemoju": "Remojuではまだ掲載されていないスポットです。Googleから場所を取得しています。",
