--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -43,7 +43,7 @@
   "TimeRequired": "所要時間",
   "RemojuRecommended": "モデルプラン",
   "UserSubmissionPlan": "みんなのプラン",
-  "FindEveryoneRecommendations": "みんなのおすすめを見る",
+  "FindEveryoneRecommendations": "次はどこに行く?",
   "BackEveryoneRecommendations": "一覧へ戻る",
   "BackEveryoneRecommendationsMyPage": "一覧",
   "EditPlan": "編集",
@@ -340,20 +340,20 @@
   "EditCancel": "キャンセル",
   "StartEx": "自宅や集合場所など出発地をセットすると、1つ目のスポットまでの経路も表示されます。",
   "EndEx": "自宅や解散場所など到着地をセットすると、最後のスポットからの経路も表示されます。",
-  "LinktoDetail":"詳細を見る",
-  "About":"アバウト",
-  "Guide":"ガイド",
-  "Policy":"ご利用規約",
+  "LinktoDetail": "詳細を見る",
+  "About": "アバウト",
+  "Guide": "ガイド",
+  "Policy": "ご利用規約",
   "MapDisp": "マップ表示",
   "AutoTips": "出発地から到着地までの最短ルートを計算します。",
   "Thanks": "いいね",
   "StartEndSpotDeleteConfirm": "出発地と到着地を削除します。よろしいですか？",
   "ReleaseStartEndSpotDeleteConfirmText": "出発地と到着地を削除します。公開する場合は、投稿内容にご注意いただき、利用規約の了承の上、公開を行ってください。自分のみが閲覧可能な状態で保存をする場合には、公開先を「自分のみ(非公開)」に変更し直してから保存ボタンを押してください。",
-  "Roundtime":"周遊時間",
-  "ErrorMsgEkitan":"経路　公共手段がありませんでした。",
+  "Roundtime": "周遊時間",
+  "ErrorMsgEkitan": "経路　公共手段がありませんでした。",
   "View": "閲覧数",
   "InPlanBox": "プランBoxに入りました。",
-  "Contact":"お問い合わせ",
-  "PlanboxChange":"プラン編集可能です。",
-  "PlanSpotList":"みんなのおすすめ一覧"
+  "Contact": "お問い合わせ",
+  "PlanboxChange": "プラン編集可能です。",
+  "PlanSpotList": "みんなのおすすめ"
 }
