--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -347,8 +347,8 @@
   "MapDisp": "マップ表示",
   "AutoTips": "出発地から到着地までの最短ルートを計算します。",
   "Thanks": "いいね",
-  "StartEndSpotDeleteConfirm": "出発地と到着地を削除します。よろしいですか？",
-  "ReleaseStartEndSpotDeleteConfirmText": "出発地と到着地を削除します。公開する場合は、投稿内容にご注意いただき、利用規約の了承の上、公開を行ってください。自分のみが閲覧可能な状態で保存をする場合には、公開先を「自分のみ(非公開)」に変更し直してから保存ボタンを押してください。",
+  "StartEndSpotDeleteConfirm": "プランを公開します。出発地と到着地は公開されません",
+  "ReleaseStartEndSpotDeleteConfirmText": "出発地と到着地は公開されません。公開する場合は、投稿内容にご注意いただき、利用規約の了承の上、公開を行ってください。自分のみが閲覧可能な状態で保存をする場合には、公開先を「自分のみ(非公開)」に変更し直してから保存ボタンを押してください。",
   "Roundtime": "周遊時間",
   "ErrorMsgEkitan": "経路　公共手段がありませんでした。",
   "View": "閲覧数",
