--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -31,7 +31,7 @@
   "Hour": "時間",
   "Minute": "分",
   "Count": "件",
-  "AddToPlan": "プランに追加",
+  "AddToPlan": "プランに入れる",
   "PaginationThrough": "～",
   "PaginationOf": "件目 ／ ",
   "PaginationItem": "件",
@@ -204,9 +204,9 @@
   "ShareYourPlanWithOtherUsers": "自分のプランを他のユーザーにも共有しよう",
   "PlanSave": "プランを保存しました。",
   "NoSpotName": "保存にはスポット名が必要です。スポット名を入力してください。",
-  "NoSpot": "あなたの旅プランが作れます。",
-  "NoSpot1": "掲載されたスポットやプランを追加して",
-  "NoSpot2": "旅プランを作ってみよう！",
+  "NoSpot": "次の休日はどこに行く？",
+  "NoSpot1": "みんなのおすすめPlanやSpotを追加して",
+  "NoSpot2": "my休日プランを作ってみよう!",
   "RegisterSpot": "スポットを登録",
   "NoReview": "まだコメントがありません。",
   "VisitDate": "訪問日",
@@ -226,7 +226,7 @@
   "VideoSizeError": "100MBを超える動画ファイルはアップロードできません。",
   "FreeMemoEx": "みんなに向けたメッセージ",
   "MakeMyPlan": "旅プランを作る",
-  "ArragePlan": "プランBOX",
+  "ArragePlan": "my休日プラン",
   "SetDeparturePoint": "出発地のセット",
   "SetDestination": "到着地のセット",
   "PointOfDeparture": "出発地",
@@ -252,7 +252,7 @@
   "SpotExplanationEx": "このスポットでやりたいことなど忘れずに書いておこう",
   "FavoriteRemoveConfirm": "お気に入りから削除しますか？",
   "FavoriteRemoved": "お気に入りを削除しました。",
-  "PlanName": "プラン名を入力 例) 東京デートプラン...",
+  "PlanName": "プラン名を入れましょう",
   "MyplanSelectPhoto": "写真選択",
   "ReportReview": "コメントを違反報告",
   "ReportReviewConfirmTitle": "不適切なコメントを報告しますか？",
