--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -352,7 +352,7 @@
   "Roundtime": "周遊時間",
   "ErrorMsgEkitan": "経路　公共手段がありませんでした。",
   "View": "閲覧数",
-  "InPlanBox": "プランBoxに入りました。",
+  "InPlanBox": "「my休日プラン」エリアで編集可能になりました。",
   "Contact": "お問い合わせ",
   "PlanboxChange": "プラン編集可能です。",
   "PlanSpotList": "みんなのおすすめ"
