--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -153,7 +153,7 @@
   "GoogleSpot": "Remojuではまだご紹介していないスポットです。Googleマップから場所を取得しています。",
   "Welcome": "ようこそ",
   "San": "さん",
-  "Sanno": "さん",
+  "Sanno": "さんの",
   "PleaseLogin": "ログインしてください",
   "MakeATripPlan": "旅プランを作成",
   "SearchBySpot": "スポットから探す",
@@ -186,8 +186,8 @@
   "EditPlanConfirmText": "他のプランが編集中です。「はい」を選択した場合は、他の未保存の編集内容は削除され、選択したプランの編集が開始されます。",
   "Close": "閉じる",
   "Open": "広げる",
-  "PlanSavedConfirmTitle": "プランを、マイページに保存しました。",
-  "PlanSavedConfirmButton": "マイプラン一覧へ",
+  "PlanSavedConfirmTitle": "my休日プランを保存しました。",
+  "PlanSavedConfirmButton": "my休日プラン一覧へ",
   "PlanClearConfirm": "このプランを本当に破棄しますか？",
   "ShareYourOwnTrip": "自分だけの旅をシェアしよう",
   "startTimeEx": "0:00",
