--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -111,7 +111,7 @@
   "UserProfile": "Profile",
   "MyplanList": "My Plan",
   "Favorite": "favorite",
-  "CreatePlan":"Create a travel plan",
+  "CreatePlan": "Create a travel plan",
   "UserProfileSaved": "Your profile has been saved.",
   "EditUserProfile": "Edit profile",
   "EditUserProfileTitle": "Edit profile",
@@ -126,7 +126,7 @@
   "editCoverImage": "Edit cover photo",
   "Article": "Written by",
   "RecommendedPlanwithSpot": " Related plan",
-  "NumberOfSpots": "Nuber of spots",
+  "NumberOfSpots": "No. of spots",
   "ErrorMsgAddSpot": "One Plan can have up to a maximum of 20 Spots (including starting point and destination).",
   "SearchByKeyword": "Enter the keyward",
   "AreaAndCommitment": "Area・Preferences",
@@ -165,7 +165,7 @@
   "LetsGoToKyotoNow": "Let's go to Kyoto",
   "ExcitingTripForKids": "Exciting trip for kids",
   "SeeOther": "See other",
-  "PlanSubmission":"Post your plan",
+  "PlanSubmission": "Post your plan",
   "PlanSubmissionSub": "Post your plan",
   "EditPlanProgress": "Edit your plan in progress",
   "ViewSavedPlans": "View my plans",
@@ -194,7 +194,7 @@
   "EnterThePlanName": "Enter the plan title (up to 20 characters)",
   "PlanNameEx": "Enter the plan title",
   "PlanExplanationEx": "Write about your Plan",
-  "labelClear":"Clear",
+  "labelClear": "Clear",
   "MemoEx": "Enter recommended points",
   "SelectAPhoto": "Select a photo (up to 8)",
   "SaveDraft": "Save draft",
@@ -214,15 +214,15 @@
   "ReviewPostAgree": "I agree to the Terms of Use.",
   "ReviewPosted": "Post",
   "Posted": "Post",
-  "TitleEx":"Please enter a title.",
+  "TitleEx": "Please enter a title.",
   "contentsEx": "Please enter the text.",
   "PlanDetail": "Plan details",
   "PlanTime": "Time of this plan",
   "Age": "'S",
   "PostersProfile": "Poster's profile",
-  "ReviewMore":"See all ## reviews",
-  "RevireAlsoMore":"See more",
-  "Continue":"More information",
+  "ReviewMore": "See all ## reviews",
+  "RevireAlsoMore": "See more",
+  "Continue": "More information",
   "VideoSizeError": "Video files larger than 100MB cannot be uploaded.",
   "FreeMemoEx": "Message for everyone",
   "MakeMyPlan": "Make my plan",
@@ -268,12 +268,12 @@
   "GoogleKeyword": "Please enter an address or Spot name",
   "StartSearch": "Origin",
   "EndSearch": "Destination",
-  "MyPlan#Sec1":"Click",
-  "MyPlan#Sec2":"Add to Plan",
-  "MyPlan#Sec3":"on each page",
-  "MyPlan#Sec4":"to create your own travel plan!",
-  "MyPlan#Sec5":"(Up to 6 spots)",
-  "MyPlan#notice":"※To save or share, you need to log in",
+  "MyPlan#Sec1": "Click",
+  "MyPlan#Sec2": "Add to Plan",
+  "MyPlan#Sec3": "on each page",
+  "MyPlan#Sec4": "to create your own travel plan!",
+  "MyPlan#Sec5": "(Up to 6 spots)",
+  "MyPlan#notice": "※To save or share, you need to log in",
   "ReportPlanUser": "Report inappropriate Plan",
   "ReportPlanUserConfirmTitle": "Report Plan as inappropriate?",
   "ReportPlanUserConfirmText": "Your report will be reviewed within a few business days.",
@@ -284,12 +284,12 @@
   "AddToPlanOnly": "Only add this Spot to your Plan",
   "SpotAllClearConfirm": "All your Spots will be deleted. Are you sure you want to continue?",
   "SavePlanConfirm": "Your Plan will be saved. Are you sure you want to continue?",
-  "isEdit":"Edit",
-  "isSave":"Save",
+  "isEdit": "Edit",
+  "isSave": "Save",
   "ViewUserPost": "View more from this contributor",
-  "ViewReview":"View my review",
-  "NoReviewMsg":"There are no comments in progress",
-  "NoPlanMsg":"This will search for the shortest route. Would you like to continue?",
+  "ViewReview": "View my review",
+  "NoReviewMsg": "There are no comments in progress",
+  "NoPlanMsg": "This will search for the shortest route. Would you like to continue?",
   "LogoutConfirmTitle": "You have unsaved Plans. Are you sure you want to log out?",
   "LogoutConfirmText": "If you select 'yes', your unsaved edits will be lost.",
   "NearestSt": "Closest station",
@@ -298,19 +298,19 @@
   "LoginConfirmTitle": "You need to log in to save.",
   "LoginConfirmText": "Go to the log in/user registration page?",
   "RequiredPlanName": "Please enter the title.",
-  "InplanCount":"People who added this to their Plan",
-  "ReviewRate":"Review rating",
+  "InplanCount": "People who added this to their Plan",
+  "ReviewRate": "Review rating",
   "AutoSearchConfirmTitle": "This will search for the shortest route. Would you like to continue?",
   "AutoSearchConfirmText": "<dl class='route'><dt>Departure</dt><dd>{0}</dd><dt>Destination</dt><dd>{1}</dd></dl>",
   "ErrorMsgAuto": "A minimum of 4 spots is required to find the shortest route.",
   "Optimized": "Optimized.",
   "AgeAnnounced": "Your age will be made public.",
   "SetBirthday": "Settings will be determined by the date of birth entered.",
-  "ImgSelected" : "Choose photos",
+  "ImgSelected": "Choose photos",
   "TravelBookmark": "Plan overview",
   "PasteImg": "Choose a cover photo for the Plan",
   "PasteImgSpot": "Add photos to Spot",
-  "NotFound" : "The page you are searching for was not found.",
+  "NotFound": "The page you are searching for was not found.",
   "ToTopPage": "Back to the top page",
   "SpotsVisited": "Sightseeing Spots",
   "NotFindRecommendations": "No relevant recommendations yet.",
@@ -325,7 +325,7 @@
   "NotPostedRemoju": "This Spot has not been published to Remoju yet. The information is from Google.",
   "PostList": "All posts from",
   "ShareLink": "Share link",
-  "ShareLinkPlanContents" : "Users with this link can share this Plan.",
+  "ShareLinkPlanContents": "Users with this link can share this Plan.",
   "LoginMessage": "Logged in",
   "PictureMemo": "Comments on photo",
   "Hedtitle": "To new users",
@@ -340,20 +340,20 @@
   "EditCancel": "Cancel",
   "StartEx": "If you set a starting point, such as your home or meeting place, the route to the first Spot will be displayed.",
   "EndEx": "If you set a destination, such as your home, the route from the last Spot to your destination will also be displayed.",
-  "LinktoDetail":"View details",
-  "About":"About",
-  "Guide":"Guid",
-  "Policy":"Privacy",
+  "LinktoDetail": "View details",
+  "About": "About",
+  "Guide": "Guid",
+  "Policy": "Privacy",
   "MapDisp": "Show map",
   "AutoTips": "The shortest route from point of departure to destination will be calculated.",
   "Thanks": "Like!",
   "StartEndSpotDeleteConfirm": "The point of departure and destination will be deleted. Are you sure you want to continue?",
   "ReleaseStartEndSpotDeleteConfirmText": "The point of departure and destination will be deleted. Before publishing, please check the contents of the post and publish it after agreeing to the Terms of Use. If you want to save your post so that only you can view it, please change the publication destination to 'only yourself (private)' and then press the save button.",
-  "Roundtime":"Round-trip time",
-  "ErrorMsgEkitan":"There was no public transportation.",
+  "Roundtime": "Round-trip time",
+  "ErrorMsgEkitan": "There was no public transportation.",
   "View": "View",
   "InPlanBox": "Entered the plan box.",
-  "Contact":"Contact",
-  "PlanboxChange":"Plan BOX has been added.",
-  "PlanSpotList":"Recommended Planlist"
+  "Contact": "Contact",
+  "PlanboxChange": "Plan BOX has been added.",
+  "PlanSpotList": "Recommended Planlist"
 }
