--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -322,7 +322,8 @@
   "includedPlan": "(You can also add these Spots to your Plan)",
   "UserPlan": "User Plans",
   "Man": "people",
-  "NotPostedRemoju": "This Spot has not been published to Remoju yet. The information is from Google.",
+  "NotPostedRemoju": "This Spot has not been published to Remoju yet. ",
+  "NotPostedRemoju2": "The information is from Google.",
   "PostList": "All posts from",
   "ShareLink": "Share link",
   "ShareLinkPlanContents": "Users with this link can share this Plan.",
@@ -355,5 +356,6 @@
   "InPlanBox": "Entered the plan box.",
   "Contact": "Contact",
   "PlanboxChange": "Plan BOX has been added.",
-  "PlanSpotList": "Recommended Planlist"
+  "PlanSpotList": "Recommended Planlist",
+  "Loading": "please wait a little bit..."
 }
