--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -318,7 +318,7 @@
   "GoogleSearch": "Google検索",
   "SearchSpot": "からヒットしたものを表示しています。",
   "GoogleSearchAny": "みんなのおすすめはありませんでした。",
-  "ReplaceKeyword": "Googleでスポットを検索してmyプランに追加しよう。",
+  "ReplaceKeyword": "Googleでスポットを検索してmy休日プランに追加しよう。",
   "includedPlan": "",
   "UserPlan": "ユーザープラン",
   "Man": "回",
