--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -357,5 +357,6 @@
   "Contact": "Contact",
   "PlanboxChange": "Plan BOX has been added.",
   "PlanSpotList": "Recommended Planlist",
-  "Loading": "please wait a little bit..."
+  "Loading": "please wait a little bit...",
+  "SaveMemo": "このダイアログを閉じてから保存します"
 }
