--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -357,5 +357,6 @@
   "Contact": "お問い合わせ",
   "PlanboxChange": "プラン編集可能です。",
   "PlanSpotList": "みんなのおすすめ",
-  "Loading": "検索しています。少々お待ちください..."
+  "Loading": "検索しています。少々お待ちください...",
+  "SaveMemo": "このダイアログを閉じてから保存します"
 }
