--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -317,9 +317,9 @@
   "Instead": "代わりに",
   "GoogleSearch": "Google検索",
   "SearchSpot": "からヒットしたものを表示しています。",
-  "GoogleSearchAny": "みんなのおすすめはありませんでした。",
-  "ReplaceKeyword": "Googleでスポットを検索してmy休日プランに追加しよう。",
-  "includedPlan": "",
+  "GoogleSearchAny": "みんなのおすすめは、まだありませんでした。",
+  "ReplaceKeyword": "Googleからスポットを検索しています... ",
+  "includedPlan": "my休日プランに追加できます。",
   "UserPlan": "ユーザープラン",
   "Man": "回",
   "NotPostedRemoju": "Remojuではまだ掲載されていないスポットです。",
@@ -355,7 +355,7 @@
   "View": "閲覧数",
   "InPlanBox": "「my休日プラン」エリアで編集可能になりました。",
   "Contact": "お問い合わせ",
-  "PlanboxChange": "プラン編集可能です。",
+  "PlanboxChange": "my休日プランに入りました。",
   "PlanSpotList": "みんなのおすすめ",
   "Loading": "検索しています。少々お待ちください...",
   "SaveMemo": "このダイアログを閉じてから保存します"
