--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -360,5 +360,7 @@
   "Loading": "検索しています。少々お待ちください...",
   "SaveMemo": "このダイアログを閉じてから保存します",
   "Planpoint": "このプランのポイント",
-  "Planmemo": "フリーメモ"
+  "Planmemo": "フリーメモ",
+  "MetaTitle": "",
+  "MetaDescription": ""
 }
