upd0522 no photos attach spotName

--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -313,10 +313,10 @@
   "NotFound": "お探しのページは見つかりませんでした。",
   "ToTopPage": "トップページへ戻る",
   "SpotsVisited": "周遊スポット",
-  "NotFindRecommendations": "関連する おすすめ は、まだありませんでした。",
+  "NotFindRecommendations": "みんなのおすすめは、まだありませんでした。",
   "Instead": "代わりに",
   "GoogleSearch": "Google検索",
-  "SearchSpot": "からヒットしたものを表示しています。",
+  "SearchSpot": "からヒットしたものを選択してください。",
   "GoogleSearchAny": "みんなのおすすめは、まだありませんでした。",
   "ReplaceKeyword": "Googleからスポットを検索しています... ",
   "includedPlan": "my休日プランに追加できます。",
