--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -317,8 +317,8 @@
   "Instead": "代わりに",
   "GoogleSearch": "Google検索",
   "SearchSpot": "からヒットしたものを選択してください。",
-  "GoogleSearchAny": "みんなのおすすめは、まだありませんでした。",
-  "ReplaceKeyword": "Googleからスポットを検索しています... ",
+  "GoogleSearchAny": "みんなのおすすめに、まだないスポットです。",
+  "ReplaceKeyword": "Googleで検索して",
   "includedPlan": "my休日プランに追加できます。",
   "UserPlan": "ユーザープラン",
   "Man": "回",
