upd0523 google search no photo

--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -362,5 +362,6 @@
   "Planpoint": "このプランのポイント",
   "Planmemo": "フリーメモ",
   "MetaTitle": "",
-  "MetaDescription": ""
+  "MetaDescription": "",
+  "SearchGoogle":"Googleで検索"
 }
