--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -362,5 +362,6 @@
   "Planpoint": "このプランのポイント",
   "Planmemo": "フリーメモ",
   "MetaTitle": "",
-  "MetaDescription": ""
+  "MetaDescription": "",
+  "SearchGoogle":"Google Search"
 }
