--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -43,7 +43,7 @@
   "TimeRequired": "所要時間",
   "RemojuRecommended": "モデルプラン",
   "UserSubmissionPlan": "みんなのプラン",
-  "FindEveryoneRecommendations": "次はどこに行く?",
+  "FindEveryoneRecommendations": "次の休日は何する?",
   "BackEveryoneRecommendations": "一覧へ戻る",
   "BackEveryoneRecommendationsMyPage": "一覧",
   "EditPlan": "編集",
@@ -356,7 +356,7 @@
   "InPlanBox": "「my休日プラン」エリアで編集可能になりました。",
   "Contact": "お問い合わせ",
   "PlanboxChange": "my休日プランに入りました。",
-  "PlanSpotList": "みんなのおすすめ",
+  "PlanSpotList": "みんなのおすすめプラン",
   "Loading": "検索しています。少々お待ちください...",
   "SaveMemo": "このダイアログを閉じてから保存します",
   "Planpoint": "このプランのポイント",
