--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -43,7 +43,7 @@
   "TimeRequired": "所要時間",
   "RemojuRecommended": "モデルプラン",
   "UserSubmissionPlan": "みんなのプラン",
-  "FindEveryoneRecommendations": "次の休日は何する?",
+  "FindEveryoneRecommendations": "次のお休み、どこいく？",
   "BackEveryoneRecommendations": "一覧へ戻る",
   "BackEveryoneRecommendationsMyPage": "一覧",
   "EditPlan": "編集",
@@ -166,9 +166,9 @@
   "ExcitingTripForKids": "家族で楽しむワクワク旅行",
   "SeeOther": "その他",
   "PlanSubmission": "プラン投稿",
-  "PlanSubmissionSub": "myプランを投稿する",
+  "PlanSubmissionSub": "Myプランを投稿する",
   "EditPlanProgress": "プランを編集する",
-  "ViewSavedPlans": "保存したmyプランを見る",
+  "ViewSavedPlans": "保存したMyプランを見る",
   "ViewMyPage": "マイページ",
   "ViewFavorite": "お気に入りを見る",
   "EditProfile": "プロフィールを編集する",
@@ -186,8 +186,8 @@
   "EditPlanConfirmText": "他のプランが編集中です。「はい」を選択した場合は、他の未保存の編集内容は削除され、選択したプランの編集が開始されます。",
   "Close": "閉じる",
   "Open": "広げる",
-  "PlanSavedConfirmTitle": "my休日プランを保存しました。",
-  "PlanSavedConfirmButton": "my休日プラン一覧へ",
+  "PlanSavedConfirmTitle": "Myプランを保存しました。",
+  "PlanSavedConfirmButton": "Myプラン一覧へ",
   "PlanClearConfirm": "このプランを本当に破棄しますか？",
   "ShareYourOwnTrip": "自分だけの旅をシェアしよう",
   "startTimeEx": "0:00",
@@ -204,9 +204,9 @@
   "ShareYourPlanWithOtherUsers": "自分のプランを他のユーザーにも共有しよう",
   "PlanSave": "プランを保存しました。",
   "NoSpotName": "保存にはスポット名が必要です。スポット名を入力してください。",
-  "NoSpot": "次の休日はどこに行く？",
+  "NoSpot": "次のお休み、どこいく？",
   "NoSpot1": "みんなのおすすめPlanやSpotを追加して",
-  "NoSpot2": "my休日プランを作ってみよう!",
+  "NoSpot2": "Myプランを作ってみよう!",
   "RegisterSpot": "スポットを登録",
   "NoReview": "まだコメントがありません。",
   "VisitDate": "訪問日",
@@ -226,7 +226,7 @@
   "VideoSizeError": "100MBを超える動画ファイルはアップロードできません。",
   "FreeMemoEx": "みんなに向けたメッセージ",
   "MakeMyPlan": "旅プランを作る",
-  "ArragePlan": "my休日プラン",
+  "ArragePlan": "Myプラン",
   "SetDeparturePoint": "出発地のセット",
   "SetDestination": "到着地のセット",
   "PointOfDeparture": "出発地",
@@ -319,7 +319,7 @@
   "SearchSpot": "からヒットしたものを選択してください。",
   "GoogleSearchAny": "みんなのおすすめに、まだないスポットです。",
   "ReplaceKeyword": "Googleで検索して",
-  "includedPlan": "my休日プランに追加できます。",
+  "includedPlan": "Myプランに追加できます。",
   "UserPlan": "ユーザープラン",
   "Man": "回",
   "NotPostedRemoju": "Remojuではまだ掲載されていないスポットです。",
@@ -353,9 +353,9 @@
   "Roundtime": "周遊時間",
   "ErrorMsgEkitan": "経路　公共手段がありませんでした。",
   "View": "閲覧数",
-  "InPlanBox": "「my休日プラン」エリアで編集可能になりました。",
+  "InPlanBox": "「Myプラン」エリアで編集可能になりました。",
   "Contact": "お問い合わせ",
-  "PlanboxChange": "my休日プランに入りました。",
+  "PlanboxChange": "Myプランに入りました。",
   "PlanSpotList": "みんなのおすすめプラン",
   "Loading": "検索しています。少々お待ちください...",
   "SaveMemo": "このダイアログを閉じてから保存します",
