--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -166,9 +166,9 @@
   "ExcitingTripForKids": "家族で楽しむワクワク旅行",
   "SeeOther": "その他",
   "PlanSubmission": "プラン投稿",
-  "PlanSubmissionSub": "Myプランを投稿する",
+  "PlanSubmissionSub": "myプランを投稿する",
   "EditPlanProgress": "プランを編集する",
-  "ViewSavedPlans": "保存したMyプランを見る",
+  "ViewSavedPlans": "保存したmyプランを見る",
   "ViewMyPage": "マイページ",
   "ViewFavorite": "お気に入りを見る",
   "EditProfile": "プロフィールを編集する",
@@ -186,8 +186,8 @@
   "EditPlanConfirmText": "他のプランが編集中です。「はい」を選択した場合は、他の未保存の編集内容は削除され、選択したプランの編集が開始されます。",
   "Close": "閉じる",
   "Open": "広げる",
-  "PlanSavedConfirmTitle": "Myプランを保存しました。",
-  "PlanSavedConfirmButton": "Myプラン一覧へ",
+  "PlanSavedConfirmTitle": "myプランを保存しました。",
+  "PlanSavedConfirmButton": "myプラン一覧へ",
   "PlanClearConfirm": "このプランを本当に破棄しますか？",
   "ShareYourOwnTrip": "自分だけの旅をシェアしよう",
   "startTimeEx": "0:00",
@@ -226,7 +226,7 @@
   "VideoSizeError": "100MBを超える動画ファイルはアップロードできません。",
   "FreeMemoEx": "みんなに向けたメッセージ",
   "MakeMyPlan": "旅プランを作る",
-  "ArragePlan": "Myプラン",
+  "ArragePlan": "myプラン",
   "SetDeparturePoint": "出発地のセット",
   "SetDestination": "到着地のセット",
   "PointOfDeparture": "出発地",
@@ -353,15 +353,18 @@
   "Roundtime": "周遊時間",
   "ErrorMsgEkitan": "経路　公共手段がありませんでした。",
   "View": "閲覧数",
-  "InPlanBox": "「Myプラン」エリアで編集可能になりました。",
+  "InPlanBox": "「myプラン」エリアで編集可能になりました。",
   "Contact": "お問い合わせ",
-  "PlanboxChange": "Myプランに入りました。",
+  "PlanboxChange": "myプランに入りました。",
   "PlanSpotList": "みんなのおすすめプラン",
+  "AllListHeader": "みんなのおすすめ",
+  "PlanListHeader": "みんなのおすすめプラン",
+  "SpotListHeader": "みんなのおすすめスポット",
   "Loading": "検索しています。少々お待ちください...",
   "SaveMemo": "このダイアログを閉じてから保存します",
   "Planpoint": "このプランのポイント",
   "Planmemo": "フリーメモ",
   "MetaTitle": "",
   "MetaDescription": "",
-  "SearchGoogle":"Googleで検索"
+  "SearchGoogle": "Googleで検索"
 }
