--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -319,7 +319,7 @@
   "SearchSpot": "からヒットしたものを選択してください。",
   "GoogleSearchAny": "みんなのおすすめに、まだないスポットです。",
   "ReplaceKeyword": "Googleで検索して",
-  "includedPlan": "Myプランに追加できます。",
+  "includedPlan": "myプランに追加できます。",
   "UserPlan": "ユーザープラン",
   "Man": "回",
   "NotPostedRemoju": "Remojuではまだ掲載されていないスポットです。",
